{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 175,
  "lineage": "d0a41fde-bfca-7ce0-1c3f-343d49921b7b",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:789717133363:loadbalancer/app/my-alb-1/6503460a1318c012",
            "arn_suffix": "app/my-alb-1/6503460a1318c012",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-alb-1-2104437272.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:789717133363:loadbalancer/app/my-alb-1/6503460a1318c012",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb-1",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ce1cc4c49818dc8c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04f8f0295d6046be0"
              },
              {
                "subnet_id": "subnet-098edd8f990000697"
              }
            ],
            "subnets": [
              "subnet-04f8f0295d6046be0",
              "subnet-098edd8f990000697"
            ],
            "vpc_id": "vpc-06951232f4211e195",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.public_subnet.aws_subnet.public",
            "module.public_subnet.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.allow_all",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb_target_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:789717133363:targetgroup/target-group-308-1/24f946b66dfcdd9b-20230908222717357900000003",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:789717133363:targetgroup/target-group-308-1/24f946b66dfcdd9b",
            "target_id": "i-0a4d198a9928cb997"
          },
          "dependencies": [
            "module.ec2_instance.aws_instance.ec2_instance",
            "module.public_subnet.aws_subnet.public",
            "module.security_groups.aws_security_group.allow_all",
            "module.target_group.aws_lb_target_group.my_target_group"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051f7e7f6c2f40dc1",
            "arn": "arn:aws:ec2:us-east-1:789717133363:instance/i-0a4d198a9928cb997",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4d198a9928cb997",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "navya",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01000b668b95e5523",
            "private_dns": "ip-10-0-10-60.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.60",
            "public_dns": "ec2-35-171-88-56.compute-1.amazonaws.com",
            "public_ip": "35.171.88.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01ca19a29ee1e06d6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0ce1cc4c49818dc8c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-098edd8f990000697",
            "tags": {
              "Name": "EC2Instance-1"
            },
            "tags_all": {
              "Name": "EC2Instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ce1cc4c49818dc8c"
            ]
          },
          "dependencies": [
            "module.public_subnet.aws_subnet.public",
            "module.security_groups.aws_security_group.allow_all"
          ]
        }
      ]
    },
    {
      "module": "module.ig",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789717133363:internet-gateway/igw-0ec91da7e4b866b9b",
            "id": "igw-0ec91da7e4b866b9b",
            "owner_id": "789717133363",
            "tags": {
              "Name": "MyIGW-308"
            },
            "tags_all": {
              "Name": "MyIGW-308"
            },
            "vpc_id": "vpc-06951232f4211e195"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789717133363:subnet/subnet-0eefe7dc409af132a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eefe7dc409af132a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "789717133363",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-Subnet-308-0"
            },
            "tags_all": {
              "Name": "private-Subnet-308-0"
            },
            "vpc_id": "vpc-06951232f4211e195"
          },
          "dependencies": [
            "module.private_subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789717133363:subnet/subnet-097b022ab23d0fd3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097b022ab23d0fd3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "789717133363",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-Subnet-308-1"
            },
            "tags_all": {
              "Name": "private-Subnet-308-1"
            },
            "vpc_id": "vpc-06951232f4211e195"
          },
          "dependencies": [
            "module.private_subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789717133363:subnet/subnet-098edd8f990000697",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098edd8f990000697",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "789717133363",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-308-0"
            },
            "tags_all": {
              "Name": "Public-Subnet-308-0"
            },
            "vpc_id": "vpc-06951232f4211e195"
          },
          "dependencies": [
            "module.public_subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789717133363:subnet/subnet-04f8f0295d6046be0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f8f0295d6046be0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "789717133363",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-308-1"
            },
            "tags_all": {
              "Name": "Public-Subnet-308-1"
            },
            "vpc_id": "vpc-06951232f4211e195"
          },
          "dependencies": [
            "module.public_subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds_postgres",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789717133363:security-group/sg-07a2df672b3c462b6",
            "description": "Allow incoming database traffic-308",
            "egress": [],
            "id": "sg-07a2df672b3c462b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "my-db-security-group-308",
            "name_prefix": "",
            "owner_id": "789717133363",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06951232f4211e195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ec91da7e4b866b9b",
            "id": "r-rtb-0fc6870d4e76e0e251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fc6870d4e76e0e25",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ig.aws_internet_gateway.my_igw",
            "module.route_tables.aws_route_table.public",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789717133363:route-table/rtb-0f2d9dc2613c43f38",
            "id": "rtb-0f2d9dc2613c43f38",
            "owner_id": "789717133363",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private-Route-Table-308"
            },
            "tags_all": {
              "Name": "Private-Route-Table-308"
            },
            "timeouts": null,
            "vpc_id": "vpc-06951232f4211e195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789717133363:route-table/rtb-0fc6870d4e76e0e25",
            "id": "rtb-0fc6870d4e76e0e25",
            "owner_id": "789717133363",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ec91da7e4b866b9b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Route-Table-308"
            },
            "tags_all": {
              "Name": "Public-Route-Table-308"
            },
            "timeouts": null,
            "vpc_id": "vpc-06951232f4211e195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0566da7a54caecae3",
            "route_table_id": "rtb-0fc6870d4e76e0e25",
            "subnet_id": "subnet-098edd8f990000697"
          },
          "dependencies": [
            "module.public_subnet.aws_subnet.public",
            "module.public_subnet.data.aws_availability_zones.available",
            "module.route_tables.aws_route_table.public",
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0566da7a54caecae3",
            "route_table_id": "rtb-0fc6870d4e76e0e25",
            "subnet_id": "subnet-098edd8f990000697"
          },
          "dependencies": [
            "module.public_subnet.aws_subnet.public",
            "module.public_subnet.data.aws_availability_zones.available",
            "module.route_tables.aws_route_table.public",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789717133363:security-group/sg-0ce1cc4c49818dc8c",
            "description": "Allow all inbound and outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce1cc4c49818dc8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-all-traffic-308",
            "name_prefix": "",
            "owner_id": "789717133363",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06951232f4211e195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:789717133363:targetgroup/target-group-308-1/24f946b66dfcdd9b",
            "arn_suffix": "targetgroup/target-group-308-1/24f946b66dfcdd9b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:789717133363:targetgroup/target-group-308-1/24f946b66dfcdd9b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target-group-308-1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06951232f4211e195"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.target_group",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:789717133363:targetgroup/target-group-308-1/24f946b66dfcdd9b-20230908222717257700000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:789717133363:targetgroup/target-group-308-1/24f946b66dfcdd9b",
            "target_id": "i-0a4d198a9928cb997"
          },
          "dependencies": [
            "module.ec2_instance.aws_instance.ec2_instance",
            "module.public_subnet.aws_subnet.public",
            "module.security_groups.aws_security_group.allow_all",
            "module.target_group.aws_lb_target_group.my_target_group"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789717133363:vpc/vpc-06951232f4211e195",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ec67835851b008c3",
            "default_route_table_id": "rtb-0f21fdaf4cc85a820",
            "default_security_group_id": "sg-0731980605a7b1212",
            "dhcp_options_id": "dopt-0e47e5c97ced8f3db",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06951232f4211e195",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f21fdaf4cc85a820",
            "owner_id": "789717133363",
            "tags": {
              "Name": "MyVPC-308"
            },
            "tags_all": {
              "Name": "MyVPC-308"
            }
          }
        }
      ]
    }
  ]
}